--- a/index.html
+++ b/index.html
@@ -310,6 +310,16 @@
         text-align: center;
       }
       /*  End: b-mail-to */
+      
+      /* Begin: i-scripts  */
+      .i-scripts {
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+      }
+      /* End: i-scripts */
     </style>
   </head>
 
@@ -320,6 +330,18 @@
           <span class="b-link__text">leonid@knyazev.me</span>
         </a>
       </div>
+    </div>
+    
+    <div class="i-scripts">
+      <!-- Yandex.Metrika counter -->
+      <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript"></script>
+      <script type="text/javascript">
+        try {
+          var yaCounter1385439 = new Ya.Metrika({id:1385439, clickmap:true, trackLinks:true, accurateTrackBounce:true});
+        } catch(e) { }
+      </script>
+      <noscript><div><img src="//mc.yandex.ru/watch/1385439" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+      <!-- /Yandex.Metrika counter -->
     </div>
   </body>
 </html>
