fix social block

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 					</div>
 					<div class="social">
 						<a href='https://www.instagram.com/leo.knyazev' target='_blank'>
-							<i class="fab fa-instagram" />
+							<i class="fab fa-instagram"></i>
 						</a>
 						<a href='https://vk.com/leokn' target='_blank'>
-							<i class="fab fa-vk" />
+							<i class="fab fa-vk"></i>
 						</a>
 						<a href='https://www.facebook.com/lknyazev' target='_blank'>
-							<i class="fab fa-facebook" />
+							<i class="fab fa-facebook"></i>
 						</a>
 						<a href='https://github.com/leokn' target='_blank'>
-							<i class="fab fa-github" />
+							<i class="fab fa-github"></i>
 						</a>
 						<a href='https://www.artlebedev.ru/n3o' target='_blank'>
-							<i class="fab fa-artlebedev" />
+							<i class="fab fa-artlebedev"></i>
 						</a>
 					</div>
 				</div>
