--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
 			</div>
 			<div class="scripts">
 				<script src="/assets/static/metrika.js" async="async" defer="defer"></script>
+				<!-- Global site tag (gtag.js) - Google Analytics -->
+				<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111127766-1"></script>
+				<script>
+  				window.dataLayer = window.dataLayer || [];
+  				function gtag(){dataLayer.push(arguments);}
+  				gtag('js', new Date());
+  				gtag('config', 'UA-111127766-1');
+				</script>
 			</div>
 		</body>
 </html>
