--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 			<title>Леонид Князев</title>
 
 			<meta http-equiv="x-ua-compatible" content="ie=edge" />
-			<meta http-equiv="cleartype" content="on" />
+			<!--[if IEMobile]>
+				<meta http-equiv="cleartype" content="on" />
+			<![endif]-->
 
 			<meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
 			<meta name="keywords" content="леонид князев, leonid knyazev" />
