--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
 			<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
 			<link rel="stylesheet" href="/assets/main.css" />
+		
+			<!-- errors -->
+			<script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?168",t.onload=function(){VK.Retargeting.Init("VK-RTRG-874688-5oR4e1"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript>
+		  <img src="https://vk.com/rtrg?p=VK-RTRG-874688-5oR4e" style="position:fixed; left:-999px;" alt=""/></noscript>
 		</head>
 		<body>
 			<div class="root">
