--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 						<p>&copy;&nbsp;1983&ndash;2022 <span title='leonid@knyazev.me'>Леонид&nbsp;Князев</span></p>
 					</div>
 					<div class="social">
-						<a href='https://www.instagram.com/leo.knyazev' target='_blank'>
+						<a href='https://www.instagram.com/leo.knyazev' title="Instagram" target='_blank' rel="noopener noreferrer">
 							<i class="fab fa-instagram"></i>
 						</a>
-						<a href='https://vk.com/leokn' target='_blank'>
+						<a href='https://vk.com/leokn' title="Вконтакте" target='_blank' rel="noopener noreferrer">
 							<i class="fab fa-vk"></i>
 						</a>
-						<a href='https://www.facebook.com/lknyazev' target='_blank'>
+						<a href='https://www.facebook.com/lknyazev' title="Facebook" target='_blank' rel="noopener noreferrer">
 							<i class="fab fa-facebook"></i>
 						</a>
-						<a href='https://github.com/leokn' target='_blank'>
+						<a href='https://github.com/leokn' title="GitHub" target='_blank' rel="noopener noreferrer">
 							<i class="fab fa-github"></i>
 						</a>
-						<a href='https://www.artlebedev.ru/n3o' target='_blank'>
+						<a href='https://www.artlebedev.ru/n3o' title="Студия Артемия Лебедева" target='_blank' rel="noopener noreferrer">
 							<i class="fab fa-artlebedev"></i>
 						</a>
 					</div>
