--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
   				gtag('js', new Date());
   				gtag('config', 'UA-111127766-1');
 				</script>
+				<script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src='https://vk.com/js/api/openapi.js?169',t.onload=function(){VK.Retargeting.Init("VK-RTRG-1312376-93hfy"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script>
+				<noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1312376-93hfy" style="position:fixed; left:-999px;" alt=""/></noscript>
 			</div>
 		</body>
 </html>
