--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 						<p>&copy;&nbsp;1983&ndash;2022 <span title='leonid@knyazev.me'>Леонид&nbsp;Князев</span></p>
 					</div>
 					<div class="social">
-						<a href='https://vk.com/leokn' title="Вконтакте" target='_blank' rel="noopener noreferrer">
+						<a href='https://vk.com/leokn' title="Вконтакте" target='_blank' rel="noopener noreferrer" onclick="ym(85240888,'reachGoal','go-to-vk'); return true;">
 							<i class="fab fa-vk"></i>
 						</a>
-						<a href='https://github.com/leokn' title="GitHub" target='_blank' rel="noopener noreferrer">
+						<a href='https://github.com/leokn' title="GitHub" target='_blank' rel="noopener noreferrer" onclick="ym(85240888,'reachGoal','go-to-github'); return true;">
 							<i class="fab fa-github"></i>
 						</a>
-						<a href='https://www.artlebedev.ru/n3o' title="Студия Артемия Лебедева" target='_blank' rel="noopener noreferrer">
+						<a href='https://www.artlebedev.ru/n3o' title="Студия Артемия Лебедева" target='_blank' rel="noopener noreferrer" onclick="ym(85240888,'reachGoal','go-to-artlebedev'); return true;">
 							<i class="fab fa-artlebedev"></i>
 						</a>
 					</div>
