--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 						<p>&copy;&nbsp;1983&ndash;2022 <span title='leonid@knyazev.me'>Леонид&nbsp;Князев</span></p>
 					</div>
 					<div class="social">
+						<a href='https://www.instagram.com/knyazev.me' title="Instagram" target='_blank' rel="noopener noreferrer">
+							<i class="fab fa-instagram"></i>
+						</a>
+						<a href='https://www.facebook.com/lknyazev' title="Facebook" target='_blank' rel="noopener noreferrer">
+							<i class="fab fa-facebook"></i>
+						</a>
 						<a href='https://vk.com/leokn' title="Вконтакте" target='_blank' rel="noopener noreferrer" onclick="ym(85240888,'reachGoal','go-to-vk'); return true;">
 							<i class="fab fa-vk"></i>
 						</a>
