--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 				</div>
 			</div>
 			<div class="scripts">
+				<!-- Yandex.Metrika -->
 				<script src="/assets/static/metrika.js" async="async" defer="defer"></script>
+				<!-- End Yandex.Metrika -->
 				<!-- Global site tag (gtag.js) - Google Analytics -->
 				<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111127766-1"></script>
 				<script>
@@ -84,7 +86,18 @@
   				gtag('config', 'UA-111127766-1');
 				</script>
 				<script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src='https://vk.com/js/api/openapi.js?169',t.onload=function(){VK.Retargeting.Init("VK-RTRG-1312376-93hfy"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script>
+				<!-- End Global site tag (gtag.js) - Google Analytics -->
+				<!-- Google Tag Manager -->
+				<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+				new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+				j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+				'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+				})(window,document,'script','dataLayer','GTM-M2CBXJP');</script>
+				<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2CBXJP" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+				<!-- End Google Tag Manager -->
+				<!-- VK pixel -->
 				<noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1312376-93hfy" style="position:fixed; left:-999px;" alt=""/></noscript>
+				<!-- End VK pixel -->
 			</div>
 		</body>
 </html>
